tests/algorithms/x/Scheme/maths/geometric_mean.error
run: exit status 70
ERROR: test4 failed
  called from <anonymous> on line 795 of file /workspace/mochi/tests/algorithms/x/Scheme/maths/geometric_mean.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 875 of file /workspace/mochi/tests/algorithms/x/Scheme/maths/geometric_mean.scm
  called from call-with-current-continuation on line 848 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 920 of file /workspace/mochi/tests/algorithms/x/Scheme/maths/geometric_mean.scm
  called from <anonymous> on line 1292 of file /usr/share/chibi/init-7.scm
  called from <anonymous> on line 821 of file /usr/share/chibi/init-7.scm